[package]
name = "geo_data_abox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retrieve_wikidata"
path = "src/main.rs"

[[bin]]
name = "merge_to_datasets"
path = "src/merge.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
anyhow = "1.0.66"
tempdir = "0.3.7"
duct = "0.13.6"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
kdam = { version = "0.2.7", features = ["gradient", "template"] }
oxigraph = "0.3.8"
itertools = "0.10.5"